fix: fix Topic code overflow

--- a/src/routes/Topic/components/TopicContent.scss
+++ b/src/routes/Topic/components/TopicContent.scss
@@ -1,5 +1,7 @@
 .container {
   width: 1000px;
+  max-width: 100%;
+  word-break: break-all;
   img {
     max-width: 100%;
   }
