--- a/src/routes/Topic/components/TopicReply.scss
+++ b/src/routes/Topic/components/TopicReply.scss
@@ -4,9 +4,11 @@
   max-width: 100%;
   width: 1000px;
   padding: 0 24px;
+  word-break: break-all;
 }
 
 .content {
+  overflow: auto;
   img {
     max-width: 100%;
   }
